[gd_scene load_steps=23 format=2]

[ext_resource path="res://audio/weapons/charge.wav" type="AudioStream" id=1]
[ext_resource path="res://_glb/weapons/wave_shot.glb" type="PackedScene" id=2]
[ext_resource path="res://player/weapons/wave_shot.gd" type="Script" id=3]
[ext_resource path="res://material/env/copper/copper_corroded1.png" type="Texture" id=4]
[ext_resource path="res://material/bubble.shader" type="Shader" id=5]
[ext_resource path="res://player/weapons/bubble.gd" type="Script" id=6]
[ext_resource path="res://audio/weapons/wave_fire.wav" type="AudioStream" id=7]
[ext_resource path="res://material/env/ancient/gem.material" type="Material" id=8]
[ext_resource path="res://material/main_spatial.shader" type="Shader" id=9]
[ext_resource path="res://material/weapons/wave_shot_albedo.png" type="Texture" id=10]

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 0.157955 ), 0.0, 4.31042, 0, 0, Vector2( 1, 0.0943182 ), -3.46266, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
width = 64
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=27]
gravity = Vector3( 0, 1, 0 )
initial_velocity = 0.1
initial_velocity_random = 1.0
radial_accel = -1.0
tangential_accel = 1.0
scale = 0.05
scale_curve = SubResource( 26 )

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/main_texture = ExtResource( 4 )

[sub_resource type="SphereMesh" id=15]
material = SubResource( 12 )
radial_segments = 12
rings = 6

[sub_resource type="ShaderMaterial" id=24]
shader = ExtResource( 9 )
shader_param/subsurface_scattering = -1.0
shader_param/softness = 0.734
shader_param/specularity = 1.0
shader_param/main_texture = ExtResource( 10 )

[sub_resource type="SphereShape" id=14]
resource_local_to_scene = true
radius = 0.1

[sub_resource type="SphereMesh" id=20]
resource_local_to_scene = true
radial_segments = 32
rings = 16

[sub_resource type="Shader" id=9]
code = "shader_type spatial;
render_mode unshaded, cull_disabled, blend_add;

uniform sampler2D main_texture;
uniform vec4 color : hint_color;
uniform float depth_barrier : hint_range(0.01, 1.0) = 0.1;

void fragment() {
	float d = textureLod(DEPTH_TEXTURE, SCREEN_UV, 0.0).r;
	float depth_diff = 1.0 - abs(clamp((d - FRAGCOORD.z)/depth_barrier, -1.0, 1.0));
	ALBEDO = texture(main_texture, UV).rgb*color.rgb;
	ALPHA = 0.6*(pow(1.0 - NORMAL.z, 2) + 0.6*pow(depth_diff, 3.0))*color.a;
}"

[sub_resource type="ShaderMaterial" id=21]
resource_local_to_scene = true
shader = SubResource( 9 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/depth_barrier = 0.1
shader_param/main_texture = ExtResource( 4 )

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:material/0:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=23]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:material/0:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 2.21914, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="wave_shot" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Particles" type="Particles" parent="." index="0"]
transform = Transform( 0.0469147, 0, 0.998899, 0, 1, 0, -0.998899, 0, 0.0469147, 0.000493288, 0.104658, 0.036413 )
emitting = false
lifetime = 0.6
local_coords = false
process_material = SubResource( 27 )
draw_pass_1 = SubResource( 15 )

[node name="wave_shot" parent="Armature/Skeleton" index="0"]
layers = 2
material/0 = SubResource( 24 )
material/1 = ExtResource( 8 )

[node name="bubble" type="Area" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0537135, 0.227082 )
collision_layer = 0
collision_mask = 536870916
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="bubble" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="bubble" index="1"]
shape = SubResource( 14 )
disabled = true

[node name="MeshInstance" type="MeshInstance" parent="bubble" index="2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
mesh = SubResource( 20 )
material/0 = SubResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="bubble" index="3"]
anims/RESET = SubResource( 22 )
anims/fire = SubResource( 23 )

[node name="ChargeSound" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 1 )
volume_db = -8.0
bus = "SFX_Player"

[node name="FireSound" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 7 )
volume_db = -8.0
bus = "SFX_Player"

[connection signal="remove" from="bubble" to="." method="_on_bubble_remove"]
[connection signal="animation_finished" from="bubble/AnimationPlayer" to="bubble" method="_on_animation_finished"]
